# Computer-Vision-Labs---Lab7

./: CMakeLists.txt  task1.cpp
